Working on work and shop

--- a/index.html
+++ b/index.html
@@ -71,15 +71,7 @@
 					</a>
 
 					<!-- Item 5 -->
-					<a href="/work/shoes" class="card-item floral">
-						<img class="card-image" src="/assets/images/work/work-shoes-thumb.jpg" />
-						<div class="card-meta">
-							<h2 class="card-title">Shoes</h2>
-						</div>
-					</a>
-
-					<!-- Item 6 -->
-					<a href="/work/floral-ball-4" class="card-item animal">
+					<a href="/work/floral-ball-4" class="card-item floral-ball-4 floral">
 						<img class="card-image" src="/assets/images/work/work-floral-4-thumb.jpg" />
 						<div class="card-meta">
 							<h2 class="card-title">Peony Cluster</h2>
@@ -87,22 +79,32 @@
 						</div>
 					</a>
 
+					<!-- Item 6 -->
+					<a href="/work/shoes" class="card-item shoes floral">
+						<img class="card-image" src="/assets/images/work/work-shoes-thumb.jpg" />
+						<div class="card-meta">
+							<h2 class="card-title">Shoes</h2>
+						</div>
+					</a>
+
 					<!-- Item 7 -->
-					<a href="/work/bushman" class="card-item animal">
+					<a href="/work/fawn" class="card-item fawn abstract">
+						<img class="card-image" src="/assets/images/work/work-fawn-thumb.jpg" />
+						<div class="card-meta">
+							<h2 class="card-title">Fawn</h2>
+						</div>
+					</a>
+
+					<!-- Item 8 -->
+					<a href="/work/bushman" class="card-item bushman floral">
 						<img class="card-image" src="/assets/images/work/work-bushman-thumb.jpg" />
 						<div class="card-meta">
 							<h2 class="card-title">Bush Man</h2>
 						</div>
 					</a>
-
-					<!-- Item 8 -->
-					<a href="" class="card-item abstract">
-						<img class="card-image" src="https://via.placeholder.com/500" />
-						<div class="card-meta">
-							<h2 class="card-title">Work Title</h2>
-						</div>
-					</a>
 				</div>
+
+				<p><a class="btn" href="/work" aria-label="View more artwork">View More</a></p>
 			</section>
 		</div>
 		<!-- End Content -->
