--- a/shop/index.html
+++ b/shop/index.html
@@ -35,13 +35,39 @@
 			<div class="card-grid">
 
 				<!-- Item 1 -->
-				<a href="/shop/shoes/" class="card-item shoes floral" >
+				<a href="/shop/shoes/" class="card-item shop-item monsters floral" >
+					<img class="card-image" src="/assets/images/work/work-monsters-type-thumb.jpg" />
+					<div class="card-meta">
+						<h2 class="card-title">Monsters</h2>
+					</div>
+					<p class="price">$24.99</p>
+				</a>
+
+				<!-- Item 1 -->
+				<a href="/shop/shoes/" class="card-item shop-item giraffe floral" >
+					<img class="card-image" src="/assets/images/work/work-giraffe-thumb.jpg" />
+					<div class="card-meta">
+						<h2 class="card-title">The Giraffe</h2>
+					</div>
+					<p class="price">$24.99</p>
+				</a>
+
+				<!-- Item 1 -->
+				<a href="/shop/shoes/" class="card-item shop-item shoes floral" >
 					<img class="card-image" src="/assets/images/work/work-shoes-thumb.jpg" />
 					<div class="card-meta">
 						<h2 class="card-title">The Shoes</h2>
-						<p class="card-series"></p>
 					</div>
-					<p>$24.99</p>
+					<p class="price">$24.99</p>
+				</a>
+
+				<!-- Item 1 -->
+				<a href="/shop/shoes/" class="card-item shop-item bunny floral" >
+					<img class="card-image" src="/assets/images/work/work-bunny-thumb.jpg" />
+					<div class="card-meta">
+						<h2 class="card-title">Bunny</h2>
+					</div>
+					<p class="price">$24.99</p>
 				</a>
 
 			</div>
