--- a/work/eyes/index.html
+++ b/work/eyes/index.html
@@ -8,6 +8,7 @@
 </head>
 <body class="work-page">
   <div class="wrapper container">
+		<!-- Header -->
 		<header class="site-header">
 	    <div class="logo-container">
 	      <a href="/" class="logo">Aaron's Sketchbook</a>
@@ -21,12 +22,28 @@
 	      </ul>
 	    </nav>
 	  </header>
+		<!-- End Header -->
 
+		<!-- Content -->
     <div class="work">
       <img class="work-image" src="/assets/images/work/work-eyes.jpg" />
-      <h1>Eyes</h1>
+      <h1>To Gaze Upon My Soul</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
+		<!-- End Content -->
+
+		<!-- Footer -->
+		<div class="site-footer">
+			<div class="footer-social">
+				Follow Me on Instagram -
+				<a href="https://www.instagram.com/aarons_sketchbook" class="social social-instagram">My Art</a>
+				<a href="https://www.instagram.com/aaron0574" class="social social-instagram">My Life</a>
+			</div>
+			<div class="copyright">
+				<p>Copyright &copy; Aaron's Sketchbook</p>
+			</div>
+		</div>
+		<!-- End Footer -->
 	</div>
 	<!--<script src="assets/scripts/main.js"></script>-->
 </body>
