--- a/work/index.html
+++ b/work/index.html
@@ -27,7 +27,7 @@
 		<!-- Content -->
 		<div class="site-content">
 
-			<p class="page-intro">Additional Text</p>
+			<p class="page-intro">Here's just a sample of what I've created.</p>
 
 			<!-- Sample Work -->
 			<section class="home-work">
@@ -44,7 +44,7 @@
 						<img class="card-image" src="/assets/images/work/work-fox-thumb.jpg" />
 						<div class="card-meta">
 							<h2 class="card-title">The Fox</h2>
-							<p class="card-series"></p>
+							<p class="card-series">Animal Series</p>
 						</div>
 					</a>
 
@@ -60,8 +60,8 @@
 					<a href="/work/eyes" class="card-item eyes abstract">
 						<img class="card-image" src="/assets/images/work/work-eyes-thumb.jpg" />
 						<div class="card-meta">
-							<h2 class="card-title">Sketchbook - Eyes</h2>
-							<p class="card-series"></p>
+							<h2 class="card-title">To Gaze Upon My Soul</h2>
+							<p class="card-series">Sketchbook Series</p>
 						</div>
 					</a>
 
@@ -85,8 +85,8 @@
 					<a href="/work/floral-ball-1" class="card-item floral-ball-1 floral">
 						<img class="card-image" src="/assets/images/work/work-floral-1-thumb.jpg" />
 						<div class="card-meta">
-							<h2 class="card-title">Floral Ball #1</h2>
-							<p class="card-series"></p>
+							<h2 class="card-title">Cluster of Wild Flowers</h2>
+							<p class="card-series">Floral Ball Series</p>
 						</div>
 					</a>
 
@@ -103,7 +103,7 @@
 						<img class="card-image" src="/assets/images/work/work-bunny-thumb.jpg" />
 						<div class="card-meta">
 							<h2 class="card-title">Floppy</h2>
-							<p class="card-series"></p>
+							<p class="card-series">Animal Series</p>
 						</div>
 					</a>
 
@@ -111,8 +111,8 @@
 					<a href="/work/monsters" class="card-item monster abstract">
 						<img class="card-image" src="/assets/images/work/work-monsters-thumb.jpg" />
 						<div class="card-meta">
-							<h2 class="card-title">Sketchbook - Monsters</h2>
-							<p class="card-series"></p>
+							<h2 class="card-title">Monsters</h2>
+							<p class="card-series">Sketchbook Series</p>
 						</div>
 					</a>
 
@@ -136,8 +136,8 @@
 					<a href="/work/floral-ball-4" class="card-item floral-ball-4 floral">
 						<img class="card-image" src="/assets/images/work/work-floral-4-thumb.jpg" />
 						<div class="card-meta">
-							<h2 class="card-title">Floral Ball #4</h2>
-							<p class="card-series"></p>
+							<h2 class="card-title">Cluster of Peonies</h2>
+							<p class="card-series">Floral Ball Series</p>
 						</div>
 					</a>
 				</div>
@@ -164,7 +164,7 @@
 	<script src="/assets/scripts/isotope.pkgd.min.js"></script>
 	<script type="text/javascript">
 		$( document ).ready(function() {
-				var $grid = $('.work-grid').isotope({
+				var $grid = $('.card-grid').isotope({
 				// options
 			});
 			// filter items on button click
