--- a/about/index.html
+++ b/about/index.html
@@ -32,10 +32,17 @@
 
 			<!-- About Content -->
 			<p class="image-right"><img src="/assets/images/profile.jpg" alt="Aaron Greene standing in front of a tree" /></p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<p>I'm a Indiana based artist and graphic designer with over 9 years of experience working as a professional artist. I have exhibited and sold artwork in countries all around the world, and I specialize in digital painting with Corel Painter and a Wacom tablet. I enjoy painting a variety of subjects, including landscape painting, still-life, impressionism, surrealism, cartooning and abstract art.</p>
+			<p>As an educator, I share my illustration techniques as video tutorials on my YouTube channel that has over 90,000 subscribers and more than 12 Million views. My collection of 1000+ video tutorials teach artists nearly every aspect of digital painting with software such as Corel Painter, Photoshop, ArtRage and Adobe Illustrator. I also work with sponsors like Wacom to review their tablets and products for digital painting. In my studio, I use a Wacom Cintiq 27QHD and I paint outdoors on a Wacom MobileStudio Pro 16.</p>
+			<p>I have been teaching art lessons for over 7 years, and provide both in-person lessons and online lessons. Students have traveled from as far away as Qatar to study in person with me.</p>
+			<p>I have been using Corel Painter for more than a decade. I am honored to have been chosen as a Corel Painter Master Elite. I'm also a Corel Painter Beta Tester and member of the Corel Painter Advisory Council.</p>
+			<p>Favorite Artists: Salvador Dali, Andy Warhol, Robert Crumb, Bob Ross, Gary Larson, Bill Alexander</p>
+			<p>Specialties: Graphic Design, Digital Illustration, Logo Design, Surrealism, Landscapes</p>
+			<p>Hardware: Wacom Cintiq 27QHD Touch, 50" Samsung 1080 HDTV, Additional 24" ASUS Monitor, Wacom MobileStudio Pro 16</p>
+			<p>Software: Adobe Photoshop CC, Corel Painter 2019, Adobe Illustrator, ArtRage, Rebelle, Adobe Creative Cloud</p>
 
 			<!-- About Form -->
-			<form name="contact" method="POST" netlify>
+			<!--<form name="contact" method="POST" netlify>
 			  <p>
 			    <label>Name: <input type="text" name="name" /></label>
 			  </p>
@@ -48,7 +55,7 @@
 			  <p>
 			    <button type="submit">Submit</button>
 			  </p>
-			</form>
+			</form>-->
 
 		</div>
 		<!-- End Content -->
