--- a/shop/monsters/index.html
+++ b/shop/monsters/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Shoes - Sketchbook Series - Aaron's Sketchbook</title>
+	<title>Monsters - Sketchbook Series - Aaron's Sketchbook</title>
 	<link rel="stylesheet" href="/assets/styles/main.css">
 </head>
 <body class="shop-page">
@@ -26,48 +26,64 @@
 
 		<!-- Content -->
     <div class="site-content">
-      <div class="shop-image"><img src="/assets/images/work/work-shoes.jpg" /></div>
-			<div class="shop-content">
-				<h1 class="page-title">Shoes</h1>
+      <div class="shop-image"><img src="/assets/images/work/work-monsters-type.jpg" /></div>
+			<div class="shop-details">
+				<h1 class="page-title">Monsters</h1>
 	      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 				<div class="purchase-options">
-					<div class="purchase-original">
-						<h2>Purchase Original</h2>
-						<p class="price">$94.99</p>
-						<p class="status">In Stock</p>
-						<p><button class="btn" href="">Buy Original</button></p>
-					</div>
-					<div class="purchase-print">
+					<div class="purchase-option purchase-print">
 						<h2>Purchase a Print</h2>
 						<p class="price">$24.99</p>
 						<p class="status">In Stock</p>
-						<p><button class="btn" href="">Buy a Print</button></p>
+						<p><a class="btn" href="">Buy a Print</a></p>
+					</div>
+					<div class="purchase-option purchase-original">
+						<h2>Purchase Original</h2>
+						<p class="price">$94.99</p>
+						<p class="status">In Stock</p>
+						<p><a class="btn" href="">Buy Original</a></p>
 					</div>
 				</div>
 			</div>
     </div>
+		<!-- End Content -->
 
+		<!-- Quality -->
 		<div class="shop-quality">
 			<div class="shop-quality-intro">
 				<img src="https://via.placeholder.com/500x700">
 				<h2>Explore the Details</h2>
 			</div>
 			<div class="shop-material">
-				<img src="https://via.placeholder.com/500x350">
+				<img src="/assets/images/work/work-monsters-type-quality.jpg">
 				<h3>High Quality Material</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 			</div>
 			<div class="shop-human-touch">
-				<img src="https://via.placeholder.com/500x350">
+				<img src="/assets/images/shop/shop-touch.jpg">
 				<h3>Human Touch</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 			</div>
 			<div class="shop-gaurantee">
 				<img src="https://via.placeholder.com/500x350">
 				<h3>Aaron's Sketchbook</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 			</div>
 		</div>
+		<!-- End Quality -->
+
+		<!-- Footer -->
+		<div class="site-footer">
+			<div class="footer-social">
+				Follow Me on Instagram -
+				<a href="https://www.instagram.com/aarons_sketchbook" class="social social-instagram">My Art</a>
+				<a href="https://www.instagram.com/aaron0574" class="social social-instagram">My Life</a>
+			</div>
+			<div class="copyright">
+				<p>Copyright &copy; Aaron's Sketchbook</p>
+			</div>
+		</div>
+		<!-- End Footer -->
 	</div>
 </body>
 </html>
