Testing PHP within Netlify

--- a/about/index.html
+++ b/about/index.html
@@ -32,14 +32,11 @@
 
 			<!-- About Content -->
 			<p class="image-right"><img src="/assets/images/profile.jpg" alt="Aaron Greene standing in front of a tree" /></p>
-			<p>I'm a Indiana based artist and graphic designer with over 9 years of experience working as a professional artist. I have exhibited and sold artwork in countries all around the world, and I specialize in digital painting with Corel Painter and a Wacom tablet. I enjoy painting a variety of subjects, including landscape painting, still-life, impressionism, surrealism, cartooning and abstract art.</p>
-			<p>As an educator, I share my illustration techniques as video tutorials on my YouTube channel that has over 90,000 subscribers and more than 12 Million views. My collection of 1000+ video tutorials teach artists nearly every aspect of digital painting with software such as Corel Painter, Photoshop, ArtRage and Adobe Illustrator. I also work with sponsors like Wacom to review their tablets and products for digital painting. In my studio, I use a Wacom Cintiq 27QHD and I paint outdoors on a Wacom MobileStudio Pro 16.</p>
-			<p>I have been teaching art lessons for over 7 years, and provide both in-person lessons and online lessons. Students have traveled from as far away as Qatar to study in person with me.</p>
-			<p>I have been using Corel Painter for more than a decade. I am honored to have been chosen as a Corel Painter Master Elite. I'm also a Corel Painter Beta Tester and member of the Corel Painter Advisory Council.</p>
+			<p>I'm an artist and graphic designer based out of northern Indiana with over 9 years of experience working as a professional artist. I enjoy illustrating a variety of subjects in many different styles such as impressionism, surrealism, cartooning and abstract art.</p>
+			<p>I specialize in black and white illustrations...</p>
+			<hr/>
 			<p>Favorite Artists: Salvador Dali, Andy Warhol, Robert Crumb, Bob Ross, Gary Larson, Bill Alexander</p>
 			<p>Specialties: Graphic Design, Digital Illustration, Logo Design, Surrealism, Landscapes</p>
-			<p>Hardware: Wacom Cintiq 27QHD Touch, 50" Samsung 1080 HDTV, Additional 24" ASUS Monitor, Wacom MobileStudio Pro 16</p>
-			<p>Software: Adobe Photoshop CC, Corel Painter 2019, Adobe Illustrator, ArtRage, Rebelle, Adobe Creative Cloud</p>
 
 			<!-- About Form -->
 			<!--<form name="contact" method="POST" netlify>
