--- a/shop/index.html
+++ b/shop/index.html
@@ -36,7 +36,7 @@
 
 				<!-- Item 1 -->
 				<a href="/shop/shoes/" class="card-item shop-item monsters floral" >
-					<img class="card-image" src="/assets/images/work/work-monsters-type-thumb.jpg" />
+					<p class="card-image"><img src="/assets/images/work/work-monsters-type-thumb.jpg" /></p>
 					<div class="card-meta">
 						<h2 class="card-title">Monsters</h2>
 					</div>
@@ -45,7 +45,7 @@
 
 				<!-- Item 1 -->
 				<a href="/shop/shoes/" class="card-item shop-item giraffe floral" >
-					<img class="card-image" src="/assets/images/work/work-giraffe-thumb.jpg" />
+					<p class="card-image"><img src="/assets/images/work/work-giraffe-thumb.jpg" /></p>
 					<div class="card-meta">
 						<h2 class="card-title">The Giraffe</h2>
 					</div>
@@ -54,7 +54,7 @@
 
 				<!-- Item 1 -->
 				<a href="/shop/shoes/" class="card-item shop-item shoes floral" >
-					<img class="card-image" src="/assets/images/work/work-shoes-thumb.jpg" />
+					<p class="card-image"><img src="/assets/images/work/work-shoes-thumb.jpg" /></p>
 					<div class="card-meta">
 						<h2 class="card-title">The Shoes</h2>
 					</div>
@@ -63,7 +63,7 @@
 
 				<!-- Item 1 -->
 				<a href="/shop/shoes/" class="card-item shop-item bunny floral" >
-					<img class="card-image" src="/assets/images/work/work-bunny-thumb.jpg" />
+					<p class="card-image"><img src="/assets/images/work/work-bunny-thumb.jpg" /></p>
 					<div class="card-meta">
 						<h2 class="card-title">Bunny</h2>
 					</div>
