--- a/work/index.html
+++ b/work/index.html
@@ -41,7 +41,7 @@
 				<div class="card-grid">
 					<!-- Item 1 -->
 					<a href="/work/fox/" class="card-item fox floral animal" >
-						<img class="card-image" src="/assets/images/work/work-fox-thumb.jpg" />
+						<p class="card-image"><img src="/assets/images/work/work-fox-thumb.jpg" /></p>
 						<div class="card-meta">
 							<h2 class="card-title">The Fox</h2>
 							<p class="card-series">Animal Series</p>
@@ -50,7 +50,7 @@
 
 					<!-- Item 2 -->
 					<a href="/work/hole" class="card-item hole abstract">
-						<img class="card-image" src="/assets/images/work/work-hole-thumb.jpg" />
+						<p class="card-image"><img src="/assets/images/work/work-hole-thumb.jpg" /></p>
 						<div class="card-meta">
 							<h2 class="card-title">The Hole</h2>
 						</div>
@@ -58,7 +58,7 @@
 
 					<!-- Item 3 -->
 					<a href="/work/eyes" class="card-item eyes abstract">
-						<img class="card-image" src="/assets/images/work/work-eyes-thumb.jpg" />
+						<p class="card-image"><img src="/assets/images/work/work-eyes-thumb.jpg" /></p>
 						<div class="card-meta">
 							<h2 class="card-title">To Gaze Upon My Soul</h2>
 							<p class="card-series">Sketchbook Series</p>
@@ -67,7 +67,7 @@
 
 					<!-- Item 4 -->
 					<a href="/work/hair" class="card-item hair abstract">
-						<img class="card-image" src="/assets/images/work/work-hair-thumb.jpg" />
+						<p class="card-image"><img src="/assets/images/work/work-hair-thumb.jpg" /></p>
 						<div class="card-meta">
 							<h2 class="card-title">Hair</h2>
 						</div>
@@ -75,7 +75,7 @@
 
 					<!-- Item 5 -->
 					<a href="/work/pineapple" class="card-item pineapple abstract">
-						<img class="card-image" src="/assets/images/work/work-pineapple-thumb.jpg" />
+						<p class="card-image"><img src="/assets/images/work/work-pineapple-thumb.jpg" /></p>
 						<div class="card-meta">
 							<h2 class="card-title">Pineapple</h2>
 						</div>
@@ -83,7 +83,7 @@
 
 					<!-- Item 6 -->
 					<a href="/work/floral-ball-1" class="card-item floral-ball-1 floral">
-						<img class="card-image" src="/assets/images/work/work-floral-1-thumb.jpg" />
+						<p class="card-image"><img src="/assets/images/work/work-floral-1-thumb.jpg" /></p>
 						<div class="card-meta">
 							<h2 class="card-title">Cluster of Wild Flowers</h2>
 							<p class="card-series">Floral Ball Series</p>
@@ -92,7 +92,7 @@
 
 					<!-- Item 7 -->
 					<a href="/work/shoes" class="card-item shoes floral">
-						<img class="card-image" src="/assets/images/work/work-shoes-thumb.jpg" />
+						<p class="card-image"><img src="/assets/images/work/work-shoes-thumb.jpg" /></p>
 						<div class="card-meta">
 							<h2 class="card-title">Shoes</h2>
 						</div>
@@ -100,7 +100,7 @@
 
 					<!-- Item 8 -->
 					<a href="/work/bunny" class="card-item bunny floral animal">
-						<img class="card-image" src="/assets/images/work/work-bunny-thumb.jpg" />
+						<p class="card-image"><img src="/assets/images/work/work-bunny-thumb.jpg" /></p>
 						<div class="card-meta">
 							<h2 class="card-title">Floppy</h2>
 							<p class="card-series">Animal Series</p>
@@ -109,7 +109,7 @@
 
 					<!-- Item 9 -->
 					<a href="/work/monsters" class="card-item monster abstract">
-						<img class="card-image" src="/assets/images/work/work-monsters-thumb.jpg" />
+						<p class="card-image"><img src="/assets/images/work/work-monsters-thumb.jpg" /></p>
 						<div class="card-meta">
 							<h2 class="card-title">Monsters</h2>
 							<p class="card-series">Sketchbook Series</p>
@@ -118,7 +118,7 @@
 
 					<!-- Item 10 -->
 					<a href="/work/squirrel" class="card-item squirrel animal abstract">
-						<img class="card-image" src="/assets/images/work/work-squirrel-thumb.jpg" />
+						<p class="card-image"><img src="/assets/images/work/work-squirrel-thumb.jpg" /></p>
 						<div class="card-meta">
 							<h2 class="card-title">Squirrel</h2>
 						</div>
@@ -126,7 +126,7 @@
 
 					<!-- Item 11 -->
 					<a href="" class="card-item Floral">
-						<img class="card-image" src="/assets/images/work/work-bushman-thumb.jpg" />
+						<p class="card-image"><img src="/assets/images/work/work-bushman-thumb.jpg" /></p>
 						<div class="card-meta">
 							<h2 class="card-title">Bush Man</h2>
 						</div>
@@ -134,7 +134,7 @@
 
 					<!-- Item 12 -->
 					<a href="/work/floral-ball-4" class="card-item floral-ball-4 floral">
-						<img class="card-image" src="/assets/images/work/work-floral-4-thumb.jpg" />
+						<p class="card-image"><img src="/assets/images/work/work-floral-4-thumb.jpg" /></p>
 						<div class="card-meta">
 							<h2 class="card-title">Cluster of Peonies</h2>
 							<p class="card-series">Floral Ball Series</p>
