Updates to card styles and focus states

--- a/shop/index.html
+++ b/shop/index.html
@@ -35,7 +35,7 @@
 			<div class="card-grid">
 
 				<!-- Item 1 -->
-				<a href="/shop/shoes/" class="card-item shop-item monsters floral" >
+				<a href="/shop/monsters/" class="card-item shop-item monsters floral" >
 					<p class="card-image"><img src="/assets/images/work/work-monsters-type-thumb.jpg" /></p>
 					<div class="card-meta">
 						<h2 class="card-title">Monsters</h2>
