--- a/index.html
+++ b/index.html
@@ -106,11 +106,13 @@
 				</div>
 
 				<p>
-					<a class="btn btn-icon" href="/work" aria-label="View more artwork"><span>View More</span>
-				    <svg class="eyeball" xmlns="http://www.w3.org/2000/svg" width="31" height="21" viewBox="0 0 31 21">
+					<a class="btn btn-icon btn-eye" href="/work" aria-label="View more artwork"><span>View More</span>
+						<span class="eye-track-tl"></span><span class="eye-track-tr"></span>
+						<span class="eye-track-bl"></span><span class="eye-track-br"></span>
+						<svg class="eyeball" xmlns="http://www.w3.org/2000/svg" width="31" height="21" viewBox="0 0 31 21">
 				     <g fill="none" fill-rule="evenodd" transform="translate(2 2)">
 				      <path stroke="#141424" stroke-width="2" d="M13.3,17.3c8.6,0,13.3-8.6,13.3-8.6S21.2,0.1,13.3,0C5.5-0.1,0,8.6,0,8.6S4.7,17.3,13.3,17.3z"></path>
-				      <ellipse cx="13.481" cy="8.5" fill="#141424" rx="2.481" ry="2.5" style="transform: translate(0px, 0px);"></ellipse>
+				      <ellipse cx="13.481" cy="8.5" fill="#141424" rx="2.481" ry="2.5"></ellipse>
 				   	</g>
 				   </svg>
 					</a>
