Significant overhaul of work and shop pages / relocating cart button

--- a/shop/monsters/index.html
+++ b/shop/monsters/index.html
@@ -40,16 +40,14 @@
 							<li>Canon Pro Premium Matte Paper</li>
 							<li>Printed with Chromalife-100+ Ink</li>
 						</ul>
-						<p>
-							<form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
-								<input type="hidden" name="cmd" value="_s-xclick">
-								<input type="hidden" name="hosted_button_id" value="FBDVDSBTXTWY8">
-								<div class="btn"><input type="submit" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!" value="Buy a Print"></div>
-								<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-							</form>
-						</p>
+						<form class="purchase-btn" target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+							<input type="hidden" name="cmd" value="_s-xclick">
+							<input type="hidden" name="hosted_button_id" value="FBDVDSBTXTWY8">
+							<div class="btn"><input type="submit" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!" value="Buy a Print"></div>
+							<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+						</form>
 					</div>
-					<div class="purchase-option purchase-original">
+					<div class="purchase-option purchase-original sold">
 						<h2>Purchase Original</h2>
 						<p class="price">$94.99</p>
 						<p class="status">Out of Stock</p>
@@ -58,10 +56,10 @@
 							<li>Strathmore 300 Bristol Paper</li>
 							<li>Acid-Free / Indian Ink</li>
 						</ul>
-						<form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+						<form class="purchase-btn" target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
 							<input type="hidden" name="cmd" value="_s-xclick">
 							<input type="hidden" name="hosted_button_id" value="7ZA3N8CTJZQ5E">
-							<div class="btn"><input type="submit" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!" value="Buy Original"></div>
+							<div class="btn"><input type="submit" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!" value="Sold Out"></div>
 							<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 						</form>
 					</div>
@@ -78,20 +76,45 @@
 			<div class="shop-material">
 				<img src="/assets/images/work/work-monsters-type-quality.jpg">
 				<h3>High Quality Material</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+				<p>When it comes to prints and originals, I make sure to choose top of the line materials so that you get the best quality product.</p>
 			</div>
 			<div class="shop-human-touch">
 				<img src="/assets/images/shop/shop-touch.jpg">
 				<h3>Human Touch</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+				<p>Each piece of work starts and ends with me before I ship it out to you. All prints are printed, packaged, and shipped from yours truly.</p>
 			</div>
 			<div class="shop-gaurantee">
 				<img src="/assets/images/shop/shop-guarantee.jpg">
 				<h3>Aaron's Sketchbook</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+				<p>Every week, I come out with new illustrations and products. For the latest information, <a href="https://www.instagram.com/aarons_sketchbook">follow me on Instagram</a> or <a href="#">subscribe to my newsletter</a>.</p>
 			</div>
 		</div>
 		<!-- End Quality -->
+
+		<!-- Related Art -->
+		<h2>Related Art</h2>
+		<div class="card-grid">
+			<!-- Item 1 -->
+			<div class="card-item horizontal fox animal" >
+				<p class="card-image"><img src="/assets/images/work/work-fox-thumb.jpg" /></p>
+				<div class="card-meta">
+					<h2 class="card-title">The Fox</h2>
+					<p class="card-series">Animal Series</p>
+				</div>
+				<a class="card-link" href="/work/fox">Learn more about the fox</a>
+			</div>
+
+			<!-- Item 2 -->
+			<div class="card-item horizontal eyes abstract">
+				<p class="card-image"><img src="/assets/images/work/work-eyes-thumb.jpg" /></p>
+				<div class="card-meta">
+					<h2 class="card-title">To Gaze Upon My Soul</h2>
+					<p class="card-series">Sketchbook Series</p>
+				</div>
+				<a class="card-link" href="/work/eyes">Learn more about eyes</a>
+			</div>
+		</div>
+		<!-- End Related Art  -->
 
 		<!-- Footer -->
 		<div class="site-footer">
