--- a/work/index.html
+++ b/work/index.html
@@ -33,6 +33,7 @@
 			<section class="home-work">
 				<div class="work-filter">
 					<button class="filter active" data-filter="*">Show All</button>
+					<button class="filter" data-filter=".monster">Monsters</button>
 					<button class="filter" data-filter=".animal">Animals</button>
 					<button class="filter" data-filter=".floral">Floral</button>
 					<button class="filter" data-filter=".abstract">Abstract</button>
