--- a/work/fox/index.html
+++ b/work/fox/index.html
@@ -25,12 +25,20 @@
 		<!-- End Header -->
 
 		<!-- Content -->
-    <div class="work">
-      <img class="work-image" src="/assets/images/work/work-fox.jpg" />
-      <h1 class="page-title">The Fox</h1>
-			<p class="page-subtitle">Animal Series</p>
+    <div class="site-content">
+      <div class="work-image"><img src="/assets/images/work/work-fox.jpg" /></div>
+      <div class="work-details">
+				<h1 class="page-title">The Fox</h1>
+				<p class="page-subtitle">Animal Series</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<h2>Details</h2>
+				<ul class="work-meta">
+					<li><strong>Paper:</strong> Strathmore 300 Series - Bristol</li>
+					<li><strong>Medium:</strong> Micron Indian Ink Pens</li>
+					<li><strong>Dimensions:</strong> 9" x 12"</li>
+				</ul>
+			</div>
     </div>
 		<!-- End Content -->
 
