Adding image to 404

--- a/404.html
+++ b/404.html
@@ -41,7 +41,9 @@
 		<main class="site-content">
 
 			<!-- Page Intro -->
-			<p class="page-intro">OOPS! The page you are looking for may have been removed had it's name changed or it is temporarily unavailable.</p>
+			<p class="page-intro">
+				<img src="/assets/images/error-404.jpg" alt="404 error" />
+				OOPS! The page you are looking for may have been removed had it's name changed or it is temporarily unavailable.</p>
 
 		</main>
 		<!-- End Content -->
