--- a/404.html
+++ b/404.html
@@ -42,8 +42,18 @@
 
 			<!-- Page Intro -->
 			<p class="page-intro">
-				<img src="/assets/images/error-404.jpg" alt="404 error" />
-				OOPS! The page you are looking for may have been removed had it's name changed or it is temporarily unavailable.</p>
+				<img class="error" src="/assets/images/error-404.jpg" alt="Error 404 Page Not Found" />
+				Oops! This is awkward. It appears that the page you are looking for does not exist.</p>
+				<p><a class="btn btn-icon btn-eye" href="#" onclick="history.back()" aria-label="View more artwork"><span class="btn-icon-text">Go back friend, go back</span>
+					<span class="eye-track-tl"></span><span class="eye-track-tr"></span>
+					<span class="eye-track-bl"></span><span class="eye-track-br"></span>
+					<svg class="eyeball" xmlns="http://www.w3.org/2000/svg" width="31" height="21" viewBox="0 0 31 21">
+					 <g fill="none" fill-rule="evenodd" transform="translate(2 2)">
+						<path stroke="#141424" stroke-width="2" d="M13.3,17.3c8.6,0,13.3-8.6,13.3-8.6S21.2,0.1,13.3,0C5.5-0.1,0,8.6,0,8.6S4.7,17.3,13.3,17.3z"></path>
+						<ellipse cx="13.481" cy="8.5" fill="#141424" rx="2.481" ry="2.5"></ellipse>
+					</g>
+				 </svg>
+				</a></p>
 
 		</main>
 		<!-- End Content -->
