--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>A place to put my artwork - Aaron's Sketchbook</title>
+	<title>404 Page Not Found - Aaron's Sketchbook</title>
 	<link rel="stylesheet" href="/assets/styles/main.css">
 </head>
 <body>
@@ -44,7 +44,7 @@
 			<p class="page-intro">
 				<img class="error" src="/assets/images/error-404.jpg" alt="Error 404 Page Not Found" />
 				Oops! This is awkward. It appears that the page you are looking for does not exist.</p>
-				<p><a class="btn btn-icon btn-eye" href="#" onclick="history.back()" aria-label="View more artwork"><span class="btn-icon-text">Go back friend, go back</span>
+				<p><a class="btn btn-icon btn-eye" href="#" onclick="history.back()" aria-label="View more artwork"><span class="btn-icon-text">Return to previous page</span>
 					<span class="eye-track-tl"></span><span class="eye-track-tr"></span>
 					<span class="eye-track-bl"></span><span class="eye-track-br"></span>
 					<svg class="eyeball" xmlns="http://www.w3.org/2000/svg" width="31" height="21" viewBox="0 0 31 21">
