--- a/shop/monsters/index.html
+++ b/shop/monsters/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Monsters - Sketchbook Series - Aaron's Sketchbook</title>
 	<link rel="stylesheet" href="/assets/styles/main.css">
+	<link href="https://cdn.snipcart.com/themes/2.0/base/snipcart.min.css" type="text/css" rel="stylesheet" />
 </head>
 <body class="shop-page">
   <div class="wrapper container">
@@ -37,175 +38,20 @@
 						<p class="status">In Stock</p>
 						<ul class="purchase-option-list">
 							<li>Dimensions: 8 1/2" x 11"</li>
-							<li>Canon Pro Premium Matte Paper</li>
+							<li>Canon Pro Premium Semi-Gloss Paper</li>
 							<li>Printed with Chromalife-100+ Ink</li>
 						</ul>
-						<div id='product-component-2ab645fa4dc'></div>
-				    <script type="text/javascript">
-				    /*<![CDATA[*/
+						<button
+					    class="snipcart-add-item btn"
+					    data-item-id="2"
+					    data-item-name="Monster - Print"
+					    data-item-price="14.99"
+					    data-item-weight="1"
+					    data-item-url="aarons-sketchbook.netlify.com/shop/monsters"
+					    data-item-description="Some fresh bacon">
+					        Buy a Print
+						</button>
 
-				    (function () {
-				      var scriptURL = 'https://sdks.shopifycdn.com/buy-button/latest/buy-button-storefront.min.js';
-				      if (window.ShopifyBuy) {
-				        if (window.ShopifyBuy.UI) {
-				          ShopifyBuyInit();
-				        } else {
-				          loadScript();
-				        }
-				      } else {
-				        loadScript();
-				      }
-
-				      function loadScript() {
-				        var script = document.createElement('script');
-				        script.async = true;
-				        script.src = scriptURL;
-				        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(script);
-				        script.onload = ShopifyBuyInit;
-				      }
-
-				      function ShopifyBuyInit() {
-				        var client = ShopifyBuy.buildClient({
-				          domain: 'aarons-sketchbook.myshopify.com',
-				          storefrontAccessToken: '18c46eed9480251907fe725e03387d8a',
-				        });
-
-				        ShopifyBuy.UI.onReady(client).then(function (ui) {
-				          ui.createComponent('product', {
-				            id: [2401589035108],
-				            node: document.getElementById('product-component-2ab645fa4dc'),
-				            moneyFormat: '%24%7B%7Bamount%7D%7D',
-				            options: {
-				  "product": {
-				    "variantId": "all",
-				    "width": "240px",
-				    "contents": {
-				      "img": false,
-				      "imgWithCarousel": false,
-				      "title": false,
-				      "variantTitle": false,
-				      "price": false,
-				      "description": false,
-				      "buttonWithQuantity": false,
-				      "quantity": false
-				    },
-				    "text": {
-				      "button": "Buy a Print"
-				    },
-				    "styles": {
-				      "product": {
-				        "text-align": "left",
-				        "@media (min-width: 601px)": {
-				          "max-width": "calc(25% - 20px)",
-				          "margin-left": "20px",
-				          "margin-bottom": "50px"
-				        }
-				      },
-				      "button": {
-				        "background-color": "#ffffff",
-				        "color": "#333333",
-				        ":hover": {
-				          "background-color": "#e6e6e6",
-				          "color": "#333333"
-				        },
-				        "border-radius": "0px",
-				        ":focus": {
-				          "background-color": "#e6e6e6"
-				        }
-				      }
-				    }
-				  },
-				  "cart": {
-				    "contents": {
-				      "button": true
-				    },
-				    "styles": {
-				      "button": {
-				        "background-color": "#ffffff",
-				        "color": "#333333",
-				        ":hover": {
-				          "background-color": "#e6e6e6",
-				          "color": "#333333"
-				        },
-				        "border-radius": "0px",
-				        ":focus": {
-				          "background-color": "#e6e6e6"
-				        }
-				      },
-				      "footer": {
-				        "background-color": "#ffffff"
-				      }
-				    }
-				  },
-				  "modalProduct": {
-				    "contents": {
-				      "img": false,
-				      "imgWithCarousel": true,
-				      "variantTitle": false,
-				      "buttonWithQuantity": true,
-				      "button": false,
-				      "quantity": false
-				    },
-				    "styles": {
-				      "product": {
-				        "@media (min-width: 601px)": {
-				          "max-width": "100%",
-				          "margin-left": "0px",
-				          "margin-bottom": "0px"
-				        }
-				      },
-				      "button": {
-				        "background-color": "#ffffff",
-				        "color": "#333333",
-				        ":hover": {
-				          "background-color": "#e6e6e6",
-				          "color": "#333333"
-				        },
-				        "border-radius": "0px",
-				        ":focus": {
-				          "background-color": "#e6e6e6"
-				        }
-				      }
-				    }
-				  },
-				  "toggle": {
-				    "styles": {
-				      "toggle": {
-				        "background-color": "#ffffff",
-				        ":hover": {
-				          "background-color": "#e6e6e6"
-				        },
-				        ":focus": {
-				          "background-color": "#e6e6e6"
-				        }
-				      },
-				      "count": {
-				        "color": "#333333",
-				        ":hover": {
-				          "color": "#333333"
-				        }
-				      },
-				      "iconPath": {
-				        "fill": "#333333"
-				      }
-				    }
-				  },
-				  "productSet": {
-				    "styles": {
-				      "products": {
-				        "@media (min-width: 601px)": {
-				          "margin-left": "-20px"
-				        }
-				      }
-				    }
-				  }
-				}
-				          });
-				        });
-				      }
-				    })();
-				    /*]]>*/
-				    </script>
 
 						<!-- <form class="purchase-btn" target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
 							<input type="hidden" name="cmd" value="_s-xclick">
@@ -295,6 +141,12 @@
 			</div>
 		</div>
 		<!-- End Footer -->
+
+		<!-- Script -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<script src="https://cdn.snipcart.com/scripts/2.0/snipcart.js" id="snipcart" data-api-key="ZjFhZmJkMzMtZmJlZi00YjUyLTg1MGYtYzIwZjk4OTc1MGE1NjM2ODMyMDA1NzcwMzY1NDM1"></script>
+		<!-- End Script -->
+
 	</div>
 </body>
 </html>
