Adding product to monsters

--- a/shop/monsters/index.html
+++ b/shop/monsters/index.html
@@ -42,13 +42,13 @@
 							<li>Printed with Chromalife-100+ Ink</li>
 						</ul>
 						<button
-					    class="snipcart-add-item btn"
+					    class="snipcart-add-item btn purchase-btn"
 					    data-item-id="2"
 					    data-item-name="Monster - Print"
 					    data-item-price="14.99"
 					    data-item-weight="1"
-					    data-item-url="aarons-sketchbook.netlify.com/shop/monsters"
-					    data-item-description="Some fresh bacon">
+					    data-item-url="/shop/monsters"
+					    data-item-description="8 1/2 x 11">
 					        Buy a Print
 						</button>
 
