Adjusting url for monsters

--- a/shop/monsters/index.html
+++ b/shop/monsters/index.html
@@ -47,7 +47,7 @@
 					    data-item-name="Monster - Print"
 					    data-item-price="14.99"
 					    data-item-weight="1"
-					    data-item-url="/shop/monsters"
+					    data-item-url="https://aarons-sketchbook.netlify.com/shop/monsters/"
 					    data-item-description="8 1/2 x 11">
 					        Buy a Print
 						</button>
