Major updates to content structure and cart functionality

--- a/work/hole/index.html
+++ b/work/hole/index.html
@@ -25,10 +25,19 @@
 		<!-- End Header -->
 
 		<!-- Content -->
-    <div class="work">
-      <img class="work-image" src="/assets/images/work/work-hole.jpg" />
-      <h1>The Hole</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <div class="site-content">
+      <div class="work-image"><img src="/assets/images/work/work-hole.jpg" /></div>
+      <div class="work-details">
+				<h1>The Hole</h1>
+      	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+				<h2>Details</h2>
+				<ul class="work-meta">
+					<li><strong>Paper:</strong> Strathmore 300 Series - Bristol</li>
+					<li><strong>Medium:</strong> Micron Indian Ink Pens</li>
+					<li><strong>Dimensions:</strong> 9" x 12"</li>
+				</ul>
+			</div>
     </div>
 		<!-- End Content -->
 
